New email addres added
Outlook.com address added

--- a/WebStyleTests/testingFloatDivsColumnsBoxSizing.html
+++ b/WebStyleTests/testingFloatDivsColumnsBoxSizing.html
@@ -8,6 +8,7 @@
 <body>
     <div id="div1">
         <p>first div. email: mijail.hernandez@yahoo.com</p>
+        <p>email: mijail.hernandez@outlook.com</p>
     </div>
     <div id="div2">
         <p>this is the second div</p>
