--- a/WebStyleTests/default.html
+++ b/WebStyleTests/default.html
@@ -49,5 +49,8 @@
         mandamus liberavisse sea. Sea debet comprehensam no, et
         blandit officiis eos, ut per ubique abhorreant
     </p>
+    <div id="div7">
+        copyright (c) 2015
+    </div>
 </body>
 </html>
