--- a/WebStyleTests/testingFloatDivsColumnsBoxSizing.html
+++ b/WebStyleTests/testingFloatDivsColumnsBoxSizing.html
@@ -62,5 +62,8 @@
             div2, you can take div3, div4, and div5 out of div2.
         </p>
     </div>
+    <div id="div7">
+        copyright (c) 2015
+    </div>
 </body>
 </html>
