--- a/WebStyleTests/testingDivs.html
+++ b/WebStyleTests/testingDivs.html
@@ -51,5 +51,8 @@
             this is the sixth div
         </p>
     </div>
+    <div id="div7">
+        copyright (c) 2015
+    </div>
 </body>
 </html>
