--- a/WebStyleTests/default.html
+++ b/WebStyleTests/default.html
@@ -29,6 +29,7 @@
     <div id="readingPane">
         <p class='highlight'>
 			Default OPTION
+            Adden new line fot testing link with JIRA
             Here is a test to see what the background color of a paragraph
             will be blue or yellow.
         </p>
