HT-7 Testing link to Jira
Testing link to Jira by using the Jira Issue Key on the commit summary
only

--- a/WebStyleTests/testingAbsoluteDivs.html
+++ b/WebStyleTests/testingAbsoluteDivs.html
@@ -52,7 +52,7 @@
         </p>
     </div>
     <div id="div7">
-        copyright (c) 2015
+        copyright (c) 2015 more Linked to JIRA
     </div>
 </body>
 </html>
