Change to test JIRA link
Not using JIRA issue key in comments, but commit belong to a branch with
the JIRA issue key on its name

--- a/WebStyleTests/testingDivs.html
+++ b/WebStyleTests/testingDivs.html
@@ -52,7 +52,7 @@
         </p>
     </div>
     <div id="div7">
-        copyright (c) 2015
+        copyright (c) 2015 Testing JIRA links
     </div>
 </body>
 </html>
