--- a/WebStyleTests/testingDivs.html
+++ b/WebStyleTests/testingDivs.html
@@ -52,7 +52,7 @@
         </p>
     </div>
     <div id="div7">
-        copyright (c) 2015 Testing JIRA links
+        copyright (c) 2015 Testing JIRA links, adicionado
     </div>
 </body>
 </html>
